--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -329,7 +329,6 @@
     <string name="input_account_name">Account Name</string>
     <string name="input_bank_account">Bank account #</string>
     <string name="input_code">Verification code</string>
-    <string name="input_amount">Amount</string>
     <string name="input_note">Note</string>
     <string name="input_vendor">Vendor</string>
     <string name="input_location">City</string>
@@ -457,6 +456,11 @@
     <string name="error_wechat_not_supported">微信未安装或当前微信版本不支持登录功能</string>
     <string name="error_no_wifi">当前不在Wi-Fi环境下，无法更新</string>
     <string name="error_timeout">连接超时</string>
+    <string name="error_create_item_no_permission">抱歉，你暂时没有创建消费的权限</string>
+    <string name="error_modify_item_no_permission">抱歉，你暂时没有修改消费的的权限</string>
+    <string name="error_create_report_no_permission">抱歉，你暂时没有创建报告的权限</string>
+    <string name="error_modify_report_no_permission">抱歉，你暂时没有修改报告的权限</string>
+    <string name="error_submit_report_no_permission">抱歉，你暂时没有提交报告的权限</string>
 
     <string name="error_network_system_error">系统错误，请稍后尝试</string>
     <string name="error_network_user_not_exists">用户不存在或密码错误</string>
@@ -577,81 +581,81 @@
     <string name="failed_to_revoke_report">Failed to revoke report</string>
     <string name="failed_to_send_email">Failed to send email</string>
     <string name="failed_to_send_message">Failed to send message</string>
-    <string name="failed_to_modify">修改失败</string>
-    <string name="failed_to_modify_user_info">用户信息修改失败</string>
-    <string name="failed_to_sign_in">登录失败</string>
-    <string name="failed_to_sign_up">注册失败</string>
-    <string name="failed_to_sign_out">登出失败</string>
-    <string name="failed_to_change_password">修改密码失败</string>
-    <string name="failed_to_set_password">设置密码失败</string>
+    <string name="failed_to_modify">Failed to modify</string>
+    <string name="failed_to_modify_user_info">Failed to modify user information</string>
+    <string name="failed_to_sign_in">Failed to sign in</string>
+    <string name="failed_to_sign_up">Failed to sign up</string>
+    <string name="failed_to_sign_out">Failed to sign up</string>
+    <string name="failed_to_change_password">Failed to change password</string>
+    <string name="failed_to_set_password">Failed to set password</string>
     <string name="failed_to_unbind_email">解绑邮箱失败</string>
     <string name="failed_to_unbind_phone">解绑手机失败</string>
     <string name="failed_to_unbind_wechat">解绑微信失败</string>
     <string name="failed_to_unbind_didi">解绑滴滴打车失败</string>
     <string name="failed_to_resend_active_email">激活邮件发送失败</string>
-    <string name="failed_to_alert">提醒发送失败</string>
-    <string name="failed_to_get_message_list">获取消息列表失败</string>
+    <string name="failed_to_alert">Failed to send reminder</string>
+    <string name="failed_to_get_message_list">Failed to get messages’ list</string>
     <string name="failed_to_get_didi_token">获取滴滴Token失败</string>
     <string name="failed_to_bind_didi">滴滴账号绑定失败</string>
     <string name="failed_to_get_didi_expenses">获取滴滴打车消费列表失败</string>
-    <string name="failed_to_delete">删除失败</string>
-    <string name="failed_to_search_companies">搜索公司失败</string>
-    <string name="failed_to_apply">申请加入公司失败</string>
+    <string name="failed_to_delete">Failed to delete</string>
+    <string name="failed_to_search_companies">Failed to search companies</string>
+    <string name="failed_to_apply">Failed to apply to join company</string>
     <string name="failed_to_switch_identity">切换身份失败</string>
-    <string name="failed_to_set_account_name">设置户名失败</string>
-    <string name="failed_to_set_bank_account">设置银行账户失败</string>
-    <string name="failed_to_set_bank_name">设置开户行失败</string>
-    <string name="failed_to_set_bank_location">设置开户地失败</string>
-    <string name="failed_to_set_admin">设置管理员失败</string>
-    <string name="failed_to_verify_code">验证码验证错误</string>
-    <string name="failed_to_experience">进入体验模式失败</string>
+    <string name="failed_to_set_account_name">Failed to set account name</string>
+    <string name="failed_to_set_bank_account">Failed to set bank account</string>
+    <string name="failed_to_set_bank_name">Failed to set opening bank</string>
+    <string name="failed_to_set_bank_location">Failed to set opening bank location</string>
+    <string name="failed_to_set_admin">Failed to set administrator</string>
+    <string name="failed_to_verify_code">Failed to verify code</string>
+    <string name="failed_to_experience">Failed to open experience mode</string>
 
-    <string name="no_pending_reports">报告都已处理完毕</string>
-    <string name="no_image">未找到图片</string>
-    <string name="no_location">无法获取地点信息</string>
-    <string name="no_city">无法获取城市信息以进行搜索</string>
-    <string name="no_company">尚未加入任何公司</string>
-    <string name="no_member">当前公司没有其他成员</string>
-    <string name="no_comment">当前没有任何评论</string>
-    <string name="no_manager">没有选择审批人</string>
-    <string name="no_cc">没有选择抄送人</string>
-    <string name="no_unarchived_items">没有可被添加的消费</string>
-    <string name="no_messages">当前没有任何消息</string>
-    <string name="no_categories">当前没有任何类别</string>
-    <string name="no_tags">当前没有任何标签</string>
+    <string name="no_pending_reports">There is no pending report</string>
+    <string name="no_image">Cannot find image</string>
+    <string name="no_location">Cannot get location</string>
+    <string name="no_city">Cannot get city information</string>
+    <string name="no_company">You haven’t joined any company</string>
+    <string name="no_member">There is nobody in company</string>
+    <string name="no_comment">There is no comment</string>
+    <string name="no_manager">You haven’t chosen managers</string>
+    <string name="no_cc">You haven’t chosen cc</string>
+    <string name="no_unarchived_items">There is no available item</string>
+    <string name="no_messages">There is no message</string>
+    <string name="no_categories">There is no category</string>
+    <string name="no_tags">There is no tag</string>
     <string name="no_expenses">当前没有任何消费记录</string>
-    <string name="no_filter_result">抱歉，没有找到符合的结果</string>
+    <string name="no_filter_result">Sorry, no matching results found</string>
     <string name="no_proxy">你暂时还未设置代理人</string>
     <string name="no_client">你暂时还未被任何人设置为代理人</string>
 
-    <string name="apply_new">你发送了加入「%1$s」的申请</string>
-    <string name="apply_others_new">%1$s 申请加入「%2$s」</string>
-    <string name="apply_rejected">你加入「%1$s」的申请被拒绝</string>
-    <string name="apply_others_rejected">你拒绝了 %1$s 加入「%2$s」的申请</string>
-    <string name="apply_accepted">你加入「%1$s」的申请已通过</string>
-    <string name="apply_others_accepted">你同意了 %1$s 加入「%2$s」的申请</string>
+    <string name="apply_new">You have applied to join 「%1$s」</string>
+    <string name="apply_others_new">%1$s applied to join「%2$s」</string>
+    <string name="apply_rejected">Your application of joining 「%1$s」is rejected</string>
+    <string name="apply_others_rejected">You have rejected %1$s’s application of joining 「%2$s」</string>
+    <string name="apply_accepted">Your application of joining 「%1$s」is approved</string>
+    <string name="apply_others_accepted">You have approved %1$s’s application of joining 「%2$s」</string>
 
-    <string name="invite_new">你邀请了用户%1$s加入「%2$s」</string>
-    <string name="invite_others_new">用户%1$s邀请你加入「%2$s」</string>
-    <string name="invite_rejected">用户%1$s拒绝了加入「%2$s」的邀请</string>
-    <string name="invite_others_rejected">你拒绝了加入「%1$s」的邀请</string>
-    <string name="invite_accepted">用户%1$s已加入「%2$s」</string>
-    <string name="invite_others_accepted">你已加入「%1$s」</string>
+    <string name="invite_new">You have approved %1$s’s application of joining 「%2$s」</string>
+    <string name="invite_others_new">%1$s invited you to join 「%2$s」</string>
+    <string name="invite_rejected">%1$s rejected the invitation of joining 「%2$s」</string>
+    <string name="invite_others_rejected">You have rejected the invitation of joining 「%1$s」</string>
+    <string name="invite_accepted">%1$s has joined 「%2$s」</string>
+    <string name="invite_others_accepted">You have joined 「%2$s」</string>
 
-    <string name="vendor_taxi">出租车</string>
-    <string name="vendor_flight">飞机票</string>
-    <string name="vendor_train">火车票</string>
-    <string name="vendor_phone">话费</string>
+    <string name="vendor_taxi">Taxi</string>
+    <string name="vendor_flight">Flight</string>
+    <string name="vendor_train">Train</string>
+    <string name="vendor_phone">Phone</string>
 
-    <string name="status_draft">待提交</string>
-    <string name="status_submitted">审核中</string>
-    <string name="status_approved">待结算</string>
-    <string name="status_rejected">退回</string>
-    <string name="status_finished">完成</string>
-    <string name="status_budget">预</string>
-    <string name="status_borrowing">借</string>
-    <string name="status_approve_ahead_approved">(已审批)</string>
-    <string name="status_cc">抄送</string>
+    <string name="status_draft">Draft</string>
+    <string name="status_submitted">Submitted</string>
+    <string name="status_approved">Approved</string>
+    <string name="status_rejected">Rejected</string>
+    <string name="status_finished">Finished</string>
+    <string name="status_budget">Budget</string>
+    <string name="status_borrowing">Borrowing</string>
+    <string name="status_approve_ahead_approved">(Approved)</string>
+    <string name="status_cc">CC</string>
 
     <string name="proxy_permission_all">提交 &#038; 审批</string>
     <string name="proxy_permission_approve">仅审批</string>
@@ -681,14 +685,14 @@
     <string name="currency_sek">瑞典克朗</string>
     <string name="currency_brl">巴西里亚尔</string>
 
-    <string name="xlistview_header_hint_normal">下拉更新</string>
-    <string name="xlistview_header_hint_ready">释放更新</string>
-    <string name="xlistview_header_hint_loading">正在加载……</string>
-    <string name="xlistview_header_last_time">最近更新：</string>
-    <string name="xlistview_footer_hint_normal">查看更多</string>
-    <string name="xlistview_footer_hint_ready">松开载入更多</string>
+    <string name="xlistview_header_hint_normal">Pull to refresh</string>
+    <string name="xlistview_header_hint_ready">Release to refresh</string>
+    <string name="xlistview_header_hint_loading">Loading...!</string>
+    <string name="xlistview_header_last_time">Last refresh time:</string>
+    <string name="xlistview_footer_hint_normal">More</string>
+    <string name="xlistview_footer_hint_ready">Release to load more</string>
 
-    <string name="surprise">如果你能看到这个窗口，说明你是一个极有探索欲望的同学，如数科技就是喜欢这样的人。你有没有兴趣加入我们呢？请发送简历到hr@cloudbaoxiao.com。</string>
-    <string name="surprise_ok">好的我知道了</string>
+    <string name="surprise">The shown of this window indicates that you are a curious person which we are looking for. Are you interested in joining us? Please send you CV to hr@cloudbaoxiao.com</string>
+    <string name="surprise_ok">OK, I know</string>
 
 </resources>
