--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -232,6 +232,7 @@
     <string name="stat_category">类别-</string>
     <string name="stat_tag">标签-</string>
     <string name="stat_user">人员-</string>
+    <string name="stat_currency">货币-</string>
 
     <string name="personal_center">个人中心</string>
     <string name="sign_out">退出登录</string>
