--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -210,6 +210,8 @@
     <string name="ready_to_approve">待审批</string>
     <string name="approved">已通过</string>
     <string name="rejected">退回</string>
+    <string name="revoked">已撤回</string>
+    <string name="proxy_approved">（%1$s代审）</string>
     <string name="report_no_name">无标题报告</string>
     <string name="continue_to_choose">继续选择</string>
     <string name="choose_following_managers">选择后续审批人</string>
@@ -224,6 +226,7 @@
     <string name="last_12_months">Last 12 Month</string>
     <string name="stat_by_category">By Category</string>
     <string name="stat_by_month">月份统计</string>
+    <string name="stat_by_status">明细统计</string>
     <string name="stat_by_currency">货币统计</string>
     <string name="stat_by_tag">By Tag</string>
     <string name="stat_by_member">By Staff</string>
@@ -367,6 +370,7 @@
     <string name="prompt_report_rejected">Report rejected</string>
     <string name="prompt_max_image_count">Sorry, you cannot add more photos</string>
     <string name="prompt_choose_proxy">请选择代理人</string>
+    <string name="prompt_choose_client">请选择委托人</string>
     <string name="prompt_feedback">Let us know your question or feedback, we will get back to you within 24 hours.</string>
     <string name="prompt_feedback_phone">Please leave your contact info for us to get back to you</string>
     <string name="prompt_sender">Sender：</string>
@@ -462,6 +466,8 @@
     <string name="error_create_report_no_permission">抱歉，你暂时没有创建报告的权限</string>
     <string name="error_modify_report_no_permission">抱歉，你暂时没有修改报告的权限</string>
     <string name="error_submit_report_no_permission">抱歉，你暂时没有提交报告的权限</string>
+    <string name="error_change_avatar_no_permission">权限不足，你暂时无法更换头像</string>
+    <string name="error_change_password_no_permission">权限不足，你暂时无法更改密码</string>
 
     <string name="error_network_system_error">系统错误，请稍后尝试</string>
     <string name="error_network_user_not_exists">用户不存在或密码错误</string>
