--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -196,6 +196,7 @@
     <string name="admin">公司管理员</string>
     <string name="submit">提交</string>
     <string name="revoke">撤回</string>
+    <string name="confirm_paid">确认已收款</string>
     <string name="approve">通过</string>
     <string name="reject">退回</string>
     <string name="reject_reason">退回理由：</string>
@@ -228,6 +229,7 @@
     <string name="stat_by_month">月份统计</string>
     <string name="stat_by_status">明细统计</string>
     <string name="stat_by_currency">货币统计</string>
+    <string name="stat_by_department">部门统计</string>
     <string name="stat_by_tag">标签统计</string>
     <string name="stat_by_member">人员统计</string>
     <string name="choose_month">选择月份</string>
@@ -235,7 +237,9 @@
     <string name="stat_category">类别-</string>
     <string name="stat_tag">标签-</string>
     <string name="stat_user">人员-</string>
+    <string name="stat_status">明细-</string>
     <string name="stat_currency">货币-</string>
+    <string name="stat_department">部门-</string>
 
     <string name="personal_center">个人中心</string>
     <string name="sign_out">退出登录</string>
@@ -538,6 +542,7 @@
     <string name="succeed_in_sending_comment">发表成功</string>
     <string name="succeed_in_submitting_report">提交成功</string>
     <string name="succeed_in_revoking_report">撤回成功</string>
+    <string name="succeed_in_confirming_report">确认成功</string>
     <string name="succeed_in_alerting">已提醒对方审批报告</string>
     <string name="succeed_in_applying">申请发送成功，管理员批准后可正式加入</string>
     <string name="succeed_in_switch_identity">切换身份成功</string>
@@ -586,6 +591,7 @@
     <string name="failed_to_send_comment">评论发表失败</string>
     <string name="failed_to_submit_report">提交报告失败</string>
     <string name="failed_to_revoke_report">撤回报告失败</string>
+    <string name="failed_to_confirm_report">确认报告失败</string>
     <string name="failed_to_send_email">邮件发送失败</string>
     <string name="failed_to_send_message">短信发送失败</string>
     <string name="failed_to_modify">修改失败</string>
@@ -659,6 +665,8 @@
     <string name="status_approved">待结算</string>
     <string name="status_rejected">退回</string>
     <string name="status_finished">完成</string>
+    <string name="status_need_confirm">待确认</string>
+    <string name="status_confirmed">已确认</string>
     <string name="status_budget">预</string>
     <string name="status_borrowing">借</string>
     <string name="status_approve_ahead_approved">(已审批)</string>
