--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -476,6 +476,7 @@
     <string name="error_change_password_no_permission">权限不足，你暂时无法更改密码</string>
     <string name="error_message_no_permission">权限不足，你暂时无法处理</string>
 
+    <string name="error_network_internet_unavailable">网络暂时无法连接，请稍后再试</string>
     <string name="error_network_system_error">系统错误，请稍后尝试</string>
     <string name="error_network_user_not_exists">用户不存在或密码错误</string>
     <string name="error_network_mail_send_error">邮件发送错误</string>
