--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -443,7 +443,7 @@
     <string name="error_comment_network_unavailable">网络未连接，无法发表评论</string>
     <string name="error_submit_network_unavailable">网络未连接，无法提交</string>
     <string name="error_update_network_unavailable">网络未连接，无法更新信息</string>
-    <string name="error_request_network_unavailable">网络未连接，无法发送请求</string>
+    <string name="error_request_network_unavailable">网络未连接，请连接网络后重试</string>
     <string name="error_unbind_network_unavailable">网络未连接，无法解绑</string>
     <string name="error_self_as_manager">不能选择自己作为上级</string>
     <string name="error_trial_invite">试用账号暂时无法邀请别人</string>
