--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="plus">+</string>
     <string name="percent">%</string>
     <string name="dash">-</string>
+    <string name="to">至</string>
     <string name="rmb_symbol">¥</string>
     <string name="ten_thousand">万</string>
     <string name="one_hundred_million">亿</string>
