--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -161,6 +161,7 @@
     <string name="note">备　注</string>
     <string name="transport">交通</string>
     <string name="choose_consumed_date">请选择消费时间</string>
+    <string name="choose_end_time">请选择结束时间</string>
     <string name="choose_category">选择类别</string>
     <string name="choose_vendor">选择商家</string>
     <string name="choose_location">选择城市</string>
