--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="china_country_code">86</string>
     <string name="year">年</string>
     <string name="month">月</string>
+    <string name="day">天</string>
     <string name="second">秒</string>
     <string name="total">总计</string>
     <string name="city">市</string>
