--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -464,7 +464,8 @@
     <string name="error_operation_failed">操作失败</string>
     <string name="error_no_items">报告里必须添加消费</string>
     <string name="error_submit_report_empty">请添加消费后再提交报告</string>
-    <string name="error_submit_report_item_not_uploaded">消费未被上传，报告不可被提交</string>
+    <string name="error_submit_report_image_unsynced">图片尚未同步至服务器，请稍后再提交</string>
+    <string name="error_submit_report_item_unsynced">消费尚未同步至服务器，请稍后再提交</string>
     <string name="error_submit_report_item_miss_info">消费缺少信息，报告不可被提交</string>
     <string name="error_images_maximum">最多只能选择%1$d张照片</string>
     <string name="error_contact_no_permission">未能读取到你的通讯录信息，可能是由于你未授权「云报销」读取你的通讯录所致。</string>
