--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -519,7 +519,8 @@
     <string name="error_network_not_unique">消费已被添加进另外的报告中</string>
     <string name="error_network_company_exists">公司已存在</string>
     <string name="error_network_proxy_error">被代理人不在你公司，无法进行该操作</string>
-    <string name="error_network_category_exceed_limit">本月内，你的%1$s已超过公司的限额</string>
+    <string name="error_network_category_count_exceed_limit">你的%1$s提交次数已经超过公司规定</string>
+    <string name="error_network_category_amount_exceed_limit">你的%1$s金额已超出公司规定</string>
     <string name="error_network_report_exceed_limit">本月内，你不能再提交报告了</string>
     <string name="error_network_proxy_exists">这位同事已经是你的代理人了</string>
 
